--- a/references.bib
+++ b/references.bib
@@ -2172,6 +2172,14 @@
   organization	= {Citeseer}
 }
 
+@book{xie2018,
+  title={R markdown: The definitive guide},
+  author={Xie, Yihui and Allaire, Joseph J and Grolemund, Garrett},
+  year={2018},
+  publisher={Chapman and Hall/CRC}
+}
+
+
 @Article{	  urbanek2011,
   title		= {iPlots eXtreme: next-generation interactive graphics
 		  design and implementation of modern interactive graphics},
@@ -3360,3 +3368,170 @@
   publisher={Elsevier}
 }
 
+@article{roiser2012,
+  title={Cognitive mechanisms of treatment in depression},
+  author={Roiser, Jonathan P and Elliott, Rebecca and Sahakian, Barbara J},
+  journal={Neuropsychopharmacology},
+  volume={37},
+  number={1},
+  pages={117--136},
+  year={2012},
+  publisher={Nature Publishing Group}
+}
+
+@article{carvalho2019,
+  title={Alcohol use disorders},
+  author={Carvalho, Andre F and Heilig, Markus and Perez, Augusto and Probst, Charlotte and Rehm, J{\"u}rgen},
+  journal={The Lancet},
+  volume={394},
+  number={10200},
+  pages={781--792},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{mounteney2016,
+  title={The drug situation in Europe: an overview of data available on illicit drugs and new psychoactive substances from European monitoring in 2015},
+  author={Mounteney, Jane and Griffiths, Paul and Sedefov, Roumen and Noor, Andre and Vicente, Juli{\'a}n and Simon, Roland},
+  journal={Addiction},
+  volume={111},
+  number={1},
+  pages={34--48},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{cao2020,
+  title={The prevalence of dementia: a systematic review and meta-analysis},
+  author={Cao, Qing and Tan, Chen-Chen and Xu, Wei and Hu, Hao and Cao, Xi-Peng and Dong, Qiang and Tan, Lan and Yu, Jin-Tai},
+  journal={Journal of Alzheimer's Disease},
+  volume={73},
+  number={3},
+  pages={1157--1166},
+  year={2020},
+  publisher={IOS Press}
+}
+
+@article{langa2017,
+  title={A comparison of the prevalence of dementia in the United States in 2000 and 2012},
+  author={Langa, Kenneth M and Larson, Eric B and Crimmins, Eileen M and Faul, Jessica D and Levine, Deborah A and Kabeto, Mohammed U and Weir, David R},
+  journal={JAMA internal medicine},
+  volume={177},
+  number={1},
+  pages={51--58},
+  year={2017},
+  publisher={American Medical Association}
+}
+
+@article{scalzo2015,
+  title={Wernicke-Korsakoff syndrome not related to alcohol use: a systematic review},
+  author={Scalzo, Simon J and Bowden, Stephen C and Ambrose, Margaret L and Whelan, Greg and Cook, Mark J},
+  journal={Journal of Neurology, Neurosurgery \& Psychiatry},
+  volume={86},
+  number={12},
+  pages={1362--1368},
+  year={2015},
+  publisher={BMJ Publishing Group Ltd}
+}
+
+@article{chandrakumar2019,
+  title={Review of thiamine deficiency disorders: Wernicke encephalopathy and Korsakoff psychosis},
+  author={Chandrakumar, Abin and Bhardwaj, Aseem and ‘t Jong, Geert W},
+  journal={Journal of basic and clinical physiology and pharmacology},
+  volume={30},
+  number={2},
+  pages={153--162},
+  year={2019},
+  publisher={De Gruyter}
+}
+
+@article{sechi2007,
+  title={Wernicke's encephalopathy: new clinical settings and recent advances in diagnosis and management},
+  author={Sechi, GianPietro and Serra, Alessandro},
+  journal={The Lancet Neurology},
+  volume={6},
+  number={5},
+  pages={442--455},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@misc{nzip2024,
+	author = {{Ministerstvo zdravotnictví}},
+	title = {{Korsakov{\ifmmode\mathring{u}\else\r{u}\fi}v syndrom}},
+	year = {2024},
+	journal = {NZIP},
+	month = dec,
+	note = {[Online; accessed 29. Dec. 2024]},
+	url = {https://www.nzip.cz/rejstrikovy-pojem/2842}
+}
+
+@inproceedings{bloch2006,
+  title={How to design a good API and why it matters},
+  author={Bloch, Joshua},
+  booktitle={Companion to the 21st ACM SIGPLAN symposium on Object-oriented programming systems, languages, and applications},
+  pages={506--507},
+  year={2006}
+}
+
+@article{ofoeda2019,
+  title={Application programming interface (API) research: A review of the past to inform the future},
+  author={Ofoeda, Joshua and Boateng, Richard and Effah, John},
+  journal={International Journal of Enterprise Information Systems (IJEIS)},
+  volume={15},
+  number={3},
+  pages={76--95},
+  year={2019},
+  publisher={IGI Global}
+}
+
+@Manual{bache2022,
+    title = {magrittr: A Forward-Pipe Operator for R},
+    author = {Stefan Milton Bache and Hadley Wickham},
+    year = {2022},
+    note = {R package version 2.0.3},
+    url = {https://CRAN.R-project.org/package=magrittr},
+  }
+
+@misc{wickham2014,
+  author = {{Wickham, Hadley}},
+	title = {{I'm Hadley Wickham, Chief Scientist at RStudio and creator of lots of R packages (incl. ggplot2, dplyr, and devtools). I love R, data analysis/science, visualisation: ask me anything! : r/dataisbeautiful}},
+	year = {2014},
+	month = jan,
+	note = {[Online; accessed 3. Jan. 2025]},
+	url = {https://www.reddit.com/r/dataisbeautiful/comments/3mp9r7/comment/cvi19ly}
+}
+
+ @Manual{auguie2017,
+    title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+    author = {Baptiste Auguie},
+    year = {2017},
+    note = {R package version 2.3},
+    url = {https://CRAN.R-project.org/package=gridExtra},
+  }
+
+ @Manual{pedersen2024,
+    title = {patchwork: The Composer of Plots},
+    author = {Thomas Lin Pedersen},
+    year = {2024},
+    note = {R package version 1.2.0},
+    url = {https://CRAN.R-project.org/package=patchwork},
+  }
+
+  @misc{rstudio2024,
+	title = {{RStudio IDE}},
+	author = {{Posit}},
+	year = {2024},
+	month = aug,
+	note = {[Online; accessed 5. Jan. 2025]},
+	url = {https://posit.co/products/open-source/rstudio}
+}
+
+@misc{microsoft2025,
+	title = {{Visual Studio Code}},
+	author = {{Microsoft}},
+	year = {2025},
+	month = jan,
+	note = {[Online; accessed 5. Jan. 2025]},
+	url = {https://code.visualstudio.com}
+}
