--- a/system.Rmd
+++ b/system.Rmd
@@ -4,21 +4,57 @@ editor_options:
   chunk_output_type: console
 ---
 
-# System description
+# System description {#system}
 
-This section contains a description of the concrete system implementation ([plotscape](https://github.com/bartonicek/plotscape) and [plotscaper](https://github.com/bartonicek/plotscaper)).
+This section contains a description of the two packages developed as part of this doctoral project ([plotscape](https://github.com/bartonicek/plotscape) and [plotscaper](https://github.com/bartonicek/plotscaper)). Since `plotscaper` provides high-level application programming interface (API) for R users, whereas `plotscape` is more concerned with more low-level JavaScript functionality, I will organize the sections correspondingly, by discussing high-level API concerns alongside `plotscaper` and implementation details alongside `plotscape`. Cross-cutting concerns will be addressed towards the ends of the respective sections. However, let's re-iterate some things that are desirable for the system to have.
 
 ## Core requirements
 
-The system needs to be able to:
+The high-level system/API needs to:
 
-- Split the raw data into a hierarchy of parts
-- Compute summary statistics on the parts
-- Further transform these summaries in a way that respects the hierarchy (e.g. stacking, normalizing by parent values)
-- Translate these summaries into visual attributes such as x- and y-position, width, height, area,...
-- Render geometric objects based on the visual attributes
+- Be accessible to a wide range of users
+- Provide functionality for creating figures programmatically and manipulating them live
+- Integrate well with popular tools within the R ecosystem, such as the RStudio IDE and RMarkdown
+
+The low-level system needs to be able to:
+
+- Partition the raw data into a hierarchy of parts
+- Compute summary statistics on these parts
+- Transform these summaries while respecting the hierarchy (e.g. stacking, normalizing by parent values)
+- Map these summaries to visual encodings such as x- and y-position, width, height, or area
+- Render geometric objects, axes, etc...
 - Do all of the above reactively, in response to user input
 
+## Application Programming Interface (`plotscaper`)
+
+As was discussed in Section \@ref(goals), a key inspiration for `plotscaper`'s API was the popular R package `ggplot2`. In `ggplot2`, plots are created by chaining together a series of function calls, each of serves to compose an (immutable) plot schema:
+
+```{r}
+#| fig-show: "hide"
+library(ggplot2)
+
+# In ggplot, plots are created by chaining a series of function calls
+ggplot(mtcars, aes(wt, mpg)) +
+  geom_point() +
+  scale_x_continuous(limits = c(0, 10))
+```
+
+```{r}
+# The ggplot2 call creates an immutable object defining the plot schema
+plot1 <- ggplot(mtcars, aes(wt, mpg))
+names(plot1)
+length(plot1$layers)
+
+# Adding components such as geoms returns a new schema object
+plot2 <- ggplot(mtcars, aes(wt, mpg)) + geom_point()
+names(plot2)
+length(plot2$layers)
+```
+
+- The package is generally designed around the idea of creating individual plots. Although multi-panel figures consisting of repeats of the same plot type can be created via facetting [`facet_wrap()` and `facet_grid()`, @wickham2016], to create multi-panel figures with a mix of different plot types, the users have to reach for external packages such as `gridExtra` [@auguie2017] or `patchwork` [@pedersen2024]. As was discussed in Section \@ref(litreview), in interactive graphics, multi-panel figures are essential, and customizing individual plots is less important than adding and composing multiple plots.
+- The model of composing an immutable plot schema works well for static graphics, however, with interactive graphics, mutability is often beneficial as well. Specifically, the ability to directly modify a rendered figure through code is particularly useful. For instance, in live figure, setting the width of a histogram bin to a specific value can be effectively achieved via a simple function call, rather than by having to manipulate a widget or some other control mechanism.   
+- The package was developed before widespread adoption of the pipe operator in R [both `%*%` from `magrittr`, @bache2022; and the native `|>` pipe, @r2024] and so it used the overloaded `+` operator to implement essentially the same functionality. Hadley Wickham himself admitted that if he had discovered the pipe operator earlier, he would have never implemented `ggplot2` with `+` [@wickham2014].
+- Many of the package's functions make heavy use of non-standard evaluation [e.g. `aes()` and `facet_wrap()`, @wickham2019]. While non-standard evaluation seems to be quite popular within the R community and does make some interactive code more concise, it also makes it more harder to use these functions programmatically [@wickham2019]. For example, using the default `aes()` function, we cannot plot all pairwise combinations of variables in a data set by simply looping over their names - to do this, we need to use a specialized `aes_string()` function that not all users may know about.
 
 ## Components
 
